--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@
   z-index: 1;
 }
 
-.block_key_value {
+.logo_place_header {
   height: 32px;
   width: 183px;
   position: absolute;
@@ -57,67 +57,88 @@
   font-weight: bold;
   align-self: center;
   position: absolute;
+  margin: 0;
 }
 
-.header__subtitle{
+.header__subtitle { 
   width: 388px; 
   font-size: 18px;
   line-height: 25px;
   font-weight: normal;
   left: 64px;
   bottom: 30px;
-  position: absolute;
+  position: absolute;  
+  margin: 0;
 }
 
-.header__link{
+.header__link {
   color: #2f80ed; 
   font-size: 18px;
   line-height: 25px;
   font-weight: normal;
-  left: 130px;
-  bottom: 45px;
+   
   text-decoration: none;
-  position: absolute;
+ 
 }
 
-.description{
-  padding-top: 100px;  
+.description {  
+  display: flex;
+  justify-content: center;
+  
+
 }
 
-.two-columns{
-  min-width: 784; 
+.two-columns {   
   width: 80%;
   font-size: 24px; 
   display:flex;
-  justify-content: space-between;
+  justify-content: space-between;    
+  
+  
 }
 
-.two-columns__brief{
+.two-columns__brief {
   line-height: 1.2;
   font-size: 18px;
   width: 175px;
   color: #2f80ed;
-  font-weight: normal;
-}
+  font-weight: normal; 
   
-
-.letter{
-  line-height:34px;
+  margin: 0;
+}
+ 
+.two-columns__main-text {
+  line-height: 34px;
   font-size: 24px;
+  width: 80%;
+  min-width: 784px;  
+  font-weight: normal;
+   
+   
+}
+
+.paragraph-conclusion {
+  margin-top: 30px;
+  margin-bottom: 0;
+}
+
+.paragraph{
+  margin-top: 0;
+}
+
+.letter {
   font-weight: bold;
 }
 
-.digits{
-  padding-top: 100px;
+.digits {
   
-}
+}  
 
 .section-title {
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
-  margin-top: 100px;
-  font-family: Arial;
+  margin: 0 ;  
   display: flex;
   justify-content: center;
 }
@@ -126,13 +147,12 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin-top: 20px;
-  font-family: Arial;
+  margin-top: 20px;   
   display: flex;
   justify-content: center;
 }
 
-.table{
+.table { 
   width: 1100px;
   margin: auto;
   display: flex;
@@ -150,27 +170,92 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
-  font-family: Arial;
+   
 } 
 
 .text {
   line-height: 1.2;
   font-size: 18px;
-  font-weight: normal;
-  font-family: Arial;
-  margin-top: 20px;
-   
+  font-weight: normal;  
+  margin-top: 20px;   
 }
 
 .text-lower {
   line-height: 1.2;
   font-size: 18px;
-  font-weight: normal;
-  font-family: Arial;
+  font-weight: normal;   
   margin-top: 20px;
+
 }
 
-/* и элемента с модификатор;ом вида ключ-значение */
+.feynman {
+  padding-top: 100px;
+  height: 790px;  
+  position: relative;
+  background-color: #f2f2f2;
+  z-index: 0;
+  
+}
+
+.feynman__title {     
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold; 
+  text-align: center;
+  margin: auto;
+  z-index: 2;
+}
+.feynman__subtitle{
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal; 
+  text-align: center;
+  margin-top: 70px;
+  z-index: 1;
+}
+
+.feynman__link{
+  position: absolute;
+  color: #2f80ed;
+  top: 50%; 
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal; 
+  display: flex;
+   
+}
+
+.feynman__image{
+  position: absolute;
+  width: 867px;
+  height: 637px;    
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.kaufman{
+  background-color:  #1f1f1f;
+  overflow: hidden;
+  position: relative;
+  z-index: 0;
+}
+.section-title_theme_dark{
+  color: white;
+  z-index: 1;
+}
+.section-subtitle_theme_dark{
+  color: white;
+}
+.table__cell_theme_dark{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+/* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
@@ -178,4 +263,39 @@
   margin-top: 80px;
 }
 
+.table__text_theme_dark{
+  
+}
 
+.kaufman__triangle {
+  position: absolute;
+  width: 877px;
+  height: 877px;
+  right: -210px;
+  top: 0; 
+  z-index: -1;  
+}
+.footer{
+  min-height: 350px;
+  background-color: #1f1f1f;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+.columns {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid red;
+}
+
+.column_content_copyright{
+  flex-basis: 711px;
+   }
+
+.logo_place_footer{
+  width: 135px;
+  height: 35px;
+  margin-top: 0;
+  margin-left: 0;
+
+}
