--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,8 @@
 .page {
-  min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
-  max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
-  margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  min-width: 1100px;  
+  max-width: 1600px;   
+  margin: 0 auto;  
+  font-family: 'Helvetica Neue', Arial, sans-serif;   
 }
 
 .header {
@@ -16,12 +12,10 @@
   background-color: #f2f2f2;
   position: relative;
   display: flex;
-  z-index: 0;
-   
-  /* выше установили ограничения для секции */
+  z-index: 0; 
 }
 
-.main-illustration {
+.header__main-illustration {
   height: 608px;
   width: 765px;
   position: absolute;
@@ -30,7 +24,18 @@
   z-index: 2;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo {  
+  left: 64px;
+  top: 30px; 
+}
+
+.logo_place_header {
+  height: 32px;
+  width: 183px;
+  position: absolute;
+  z-index: 5;  
+}
+
 .header__square-pic {
   height: 568px;
   width: 568px;
@@ -39,14 +44,6 @@
   right: 0;
   top: 64px;
   z-index: 1;
-}
-
-.logo_place_header {
-  height: 32px;
-  width: 183px;
-  position: absolute;
-  left: 64px;
-  top: 30px;
 }
 
 .header__title {
@@ -58,6 +55,7 @@
   align-self: center;
   position: absolute;
   margin: 0;
+  z-index: 4;
 }
 
 .header__subtitle { 
@@ -69,32 +67,28 @@
   bottom: 30px;
   position: absolute;  
   margin: 0;
+  z-index: 3;
 }
 
 .header__link {
   color: #2f80ed; 
   font-size: 18px;
   line-height: 25px;
-  font-weight: normal;
-   
-  text-decoration: none;
- 
+  font-weight: normal;   
+  text-decoration: none; 
 }
 
 .description {  
   display: flex;
   justify-content: center;
-  
-
+  padding-top: 100px;
 }
 
 .two-columns {   
   width: 80%;
   font-size: 24px; 
   display:flex;
-  justify-content: space-between;    
-  
-  
+  justify-content: space-between;
 }
 
 .two-columns__brief {
@@ -102,8 +96,7 @@
   font-size: 18px;
   width: 175px;
   color: #2f80ed;
-  font-weight: normal; 
-  
+  font-weight: normal;  
   margin: 0;
 }
  
@@ -112,17 +105,15 @@
   font-size: 24px;
   width: 80%;
   min-width: 784px;  
-  font-weight: normal;
-   
-   
+  font-weight: normal;  
 }
 
-.paragraph-conclusion {
+.two-columns__paragraph-conclusion {
   margin-top: 30px;
   margin-bottom: 0;
 }
 
-.paragraph{
+.two-columns__paragraph {
   margin-top: 0;
 }
 
@@ -131,7 +122,8 @@
 }
 
 .digits {
-  
+  padding-top: 100px;
+  padding-bottom: 100px;
 }  
 
 .section-title {
@@ -154,38 +146,37 @@
 
 .table { 
   width: 1100px;
-  margin: auto;
+  margin: auto; 
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-
 }
 
-.cell{
+.table__cell {
   width: 250px;
   margin-top: 60px;
 }
 
-.heading {
+.table__heading {
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
-   
+  margin: 0;
+  margin-bottom: 20px;  
 } 
 
-.text {
+.table__text {
   line-height: 1.2;
   font-size: 18px;
-  font-weight: normal;  
-  margin-top: 20px;   
+  font-weight: normal;   
+  margin: 0;
 }
 
-.text-lower {
+.table__text-lower {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;   
   margin-top: 20px;
-
 }
 
 .feynman {
@@ -193,8 +184,7 @@
   height: 790px;  
   position: relative;
   background-color: #f2f2f2;
-  z-index: 0;
-  
+  z-index: 0;  
 }
 
 .feynman__title {     
@@ -206,7 +196,8 @@
   margin: auto;
   z-index: 2;
 }
-.feynman__subtitle{
+
+.feynman__subtitle {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal; 
@@ -215,19 +206,18 @@
   z-index: 1;
 }
 
-.feynman__link{
+.feynman__link {
   position: absolute;
   color: #2f80ed;
   top: 50%; 
   right: 48px;
   line-height: 51px;
   font-size: 36px;
-  font-weight: normal; 
-  display: flex;
-   
+  font-weight: normal;   
+  text-decoration: none;   
 }
 
-.feynman__image{
+.feynman__image {
   position: absolute;
   width: 867px;
   height: 637px;    
@@ -236,35 +226,39 @@
   z-index: -1;
 }
 
-.kaufman{
+.kaufman {
   background-color:  #1f1f1f;
   overflow: hidden;
   position: relative;
+  padding-top: 90px;
+  padding-bottom: 90px;
   z-index: 0;
 }
-.section-title_theme_dark{
-  color: white;
-  z-index: 1;
-}
-.section-subtitle_theme_dark{
-  color: white;
-}
-.table__cell_theme_dark{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
 
-/* и элемента с модификатором вида ключ-значение */
+.section-title_theme_dark {
+  color: white;
+  z-index: 1;   
+} 
+
+.section-subtitle_theme_dark {
+  color: white;
+  margin-top: 20px;  
+} 
+ 
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+} 
+
+.table__heading_theme_dark{
+  margin: 0;
+  margin-bottom: 20px; 
 }
 
 .table__text_theme_dark{
-  
+  margin: 0;
 }
 
 .kaufman__triangle {
@@ -275,27 +269,78 @@
   top: 0; 
   z-index: -1;  
 }
-.footer{
+
+.footer {
+  position: relative;
   min-height: 350px;
   background-color: #1f1f1f;
-  padding-top: 60px;
-  padding-bottom: 40px;
+  display: flex;
+  justify-content: center;
+  z-index: 0;  
 }
-.columns {
+
+.footer__columns {
   width: 90%;
   display: flex;
   justify-content: space-between;
-  border: 2px solid red;
+  margin: 60px auto 40px;   
 }
 
-.column_content_copyright{
+.footer__column_content_copyright{
   flex-basis: 711px;
-   }
-
-.logo_place_footer{
-  width: 135px;
-  height: 35px;
-  margin-top: 0;
-  margin-left: 0;
-
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+ 
+.logo_place_footer {
+  width: 135px;
+  height: 35px;  
+}
+
+.footer__author {  
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal; 
+  color: white;
+  margin-bottom: 18px;
+  margin-left: 0; 
+} 
+
+.footer__column-heading {
+margin: 0;
+color: white; 
+font-size: 18px;
+line-height: 30px;
+font-weight: bold;
+display: flex;
+flex: column;
+} 
+
+.footer__column-links {
+  margin-top: 20px;
+  margin-bottom: 16px; 
+  display: flex;
+  flex-direction: column;     
+}
+
+.footer__column-link {
+  color: white; 
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: normal;
+  text-decoration: none;  
+}
+
+.footer__column_content_social {
+  display: flex;
+  flex-direction: column;    
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  padding-right: 10px;
+}
+ 
+ 
