--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,10 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+.list {
+  list-style-type: none;
+}
+
 .header {
   height: 100vh;
   min-height: 600px;
@@ -24,16 +28,13 @@
   z-index: 2;
 }
 
-.logo {  
-  left: 64px;
-  top: 30px; 
-}
-
 .logo_place_header {
   height: 32px;
   width: 183px;
   position: absolute;
   z-index: 5;  
+  left: 64px;
+  top: 30px; 
 }
 
 .header__square-pic {
@@ -49,12 +50,11 @@
 .header__title {
   font-size: 102px;
   line-height: 96px;
-  width: 730px;
-  left: 64px;
+  width: 730px;  
   font-weight: bold;
-  align-self: center;
-  position: absolute;
-  margin: 0;
+  display: flex;
+  align-self: center; 
+  margin-left: 64px;    
   z-index: 4;
 }
 
@@ -87,7 +87,7 @@
 .two-columns {   
   width: 80%;
   font-size: 24px;
-  display:flex;
+  display: flex;
   justify-content: space-between;
 }
 
@@ -105,19 +105,19 @@
   font-size: 24px;
   width: 80%;
   min-width: 784px;
-  font-weight: normal;  
+  font-weight: normal;
+}
+ 
+.two-columns__paragraph {
+  margin: 0;
+  margin-bottom: 30px;
 }
 
-.two-columns__paragraph-conclusion {
-  margin-top: 30px;
+.two-columns__paragraph:last-child {
   margin-bottom: 0;
 }
 
-.two-columns__paragraph {
-  margin-top: 0;
-}
-
-.letter {
+.two-columns__span-accent {
   font-weight: bold;
 }
 
@@ -142,6 +142,7 @@
   margin-top: 20px;
   display: flex;
   justify-content: center;
+  margin-bottom: 0;
 }
 
 .table { 
@@ -170,6 +171,9 @@
   font-size: 18px;
   font-weight: normal;
   margin: 0;
+}
+.table__text:last-child {
+margin-top: 20px;
 }
 
 .table__text-lower {
@@ -227,7 +231,7 @@
 }
 
 .kaufman {
-  background-color:  #1f1f1f;
+  background-color:  #1f1f1f; 
   overflow: hidden;
   position: relative;
   padding-top: 90px;
@@ -261,13 +265,16 @@
   margin: 0;
 }
 
-.kaufman__triangle {
-  position: absolute;
-  width: 877px;
-  height: 877px;
-  right: -210px;
+.kaufman__triangle {  
+  background-image: url(kaufman-triangle.svg);
+  background-repeat: no-repeat;
+  background-position: contain;
+  width: 877px; 
+  height: 877px;  
   top: 0;
-  z-index: -1;  
+  right: -210px;
+  position: absolute;   
+  z-index: -1; 
 }
 
 .footer {
@@ -294,7 +301,7 @@
 }
  
 .logo_place_footer {
-  width: 135px;
+  width: 183px;
   height: 35px;  
 }
 
@@ -329,7 +336,8 @@ flex: column;
   font-size: 18px;
   line-height: 30px;
   font-weight: normal;
-  text-decoration: none;  
+  text-decoration: none;
+  padding: 0;  
 }
 
 .footer__column_content_social {
