--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
   background-color: #f2f2f2;
   position: relative;
   display: flex;
-  z-index: 0; 
+  z-index: 0;
 }
 
 .header__main-illustration {
@@ -32,9 +32,9 @@
   height: 32px;
   width: 183px;
   position: absolute;
-  z-index: 5;  
+  z-index: 5; 
   left: 64px;
-  top: 30px; 
+  top: 30px;
 }
 
 .header__square-pic {
@@ -50,15 +50,15 @@
 .header__title {
   font-size: 102px;
   line-height: 96px;
-  width: 730px;  
+  width: 730px;
   font-weight: bold;
   display: flex;
-  align-self: center; 
-  margin-left: 64px;    
+  align-self: center;
+  margin-left: 64px; 
   z-index: 4;
 }
 
-.header__subtitle { 
+.header__subtitle {
   width: 388px;
   font-size: 18px;
   line-height: 25px;
@@ -75,16 +75,20 @@
   font-size: 18px;
   line-height: 25px;
   font-weight: normal;
-  text-decoration: none; 
+  text-decoration: none;
 }
 
-.description {  
+.header__link:hover {
+  color: rgb(155, 149, 149);
+}
+
+.description {
   display: flex;
   justify-content: center;
   padding-top: 100px;
 }
 
-.two-columns {   
+.two-columns {
   width: 80%;
   font-size: 24px;
   display: flex;
@@ -124,7 +128,7 @@
 .digits {
   padding-top: 100px;
   padding-bottom: 100px;
-}  
+}
 
 .section-title {
   line-height: 1.15;
@@ -163,8 +167,8 @@
   font-size: 24px;
   font-weight: bold;
   margin: 0;
-  margin-bottom: 20px;  
-} 
+  margin-bottom: 20px; 
+}
 
 .table__text {
   line-height: 1.2;
@@ -172,8 +176,9 @@
   font-weight: normal;
   margin: 0;
 }
+
 .table__text:last-child {
-margin-top: 20px;
+  margin-top: 20px;
 }
 
 .table__text-lower {
@@ -188,10 +193,10 @@ margin-top: 20px;
   height: 790px;
   position: relative;
   background-color: #f2f2f2;
-  z-index: 0;  
+  z-index: 0;
 }
 
-.feynman__title {     
+.feynman__title {    
   width: 648px;
   line-height: 1.15;
   font-size: 120px;
@@ -218,7 +223,11 @@ margin-top: 20px;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
-  text-decoration: none;   
+  text-decoration: none;  
+}
+
+.feynman__link:hover {
+  color: rgb(155, 149, 149);
 }
 
 .feynman__image {
@@ -231,7 +240,7 @@ margin-top: 20px;
 }
 
 .kaufman {
-  background-color:  #1f1f1f; 
+  background-color:  #1f1f1f;
   overflow: hidden;
   position: relative;
   padding-top: 90px;
@@ -241,40 +250,40 @@ margin-top: 20px;
 
 .section-title_theme_dark {
   color: white;
-  z-index: 1;   
-} 
+  z-index: 1;
+}
 
 .section-subtitle_theme_dark {
   color: white;
-  margin-top: 20px;  
-} 
+  margin-top: 20px;
+}
  
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
-} 
-
-.table__heading_theme_dark{
-  margin: 0;
-  margin-bottom: 20px; 
 }
 
-.table__text_theme_dark{
+.table__heading_theme_dark {
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.table__text_theme_dark {
   margin: 0;
 }
 
-.kaufman__triangle {  
+.kaufman__triangle {
   background-image: url(kaufman-triangle.svg);
   background-repeat: no-repeat;
   background-position: contain;
-  width: 877px; 
-  height: 877px;  
+  width: 877px;
+  height: 877px;
   top: 0;
   right: -210px;
-  position: absolute;   
-  z-index: -1; 
+  position: absolute;
+  z-index: -1;
 }
 
 .footer {
@@ -283,52 +292,53 @@ margin-top: 20px;
   background-color: #1f1f1f;
   display: flex;
   justify-content: center;
-  z-index: 0;  
+  z-index: 0;
 }
 
 .footer__columns {
   width: 90%;
   display: flex;
   justify-content: space-between;
-  margin: 60px auto 40px;   
+  margin: 60px auto 40px;
 }
 
-.footer__column_content_copyright{
+.footer__column_content_copyright {
   flex-basis: 711px;
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
  
 .logo_place_footer {
   width: 183px;
-  height: 35px;  
+  height: 35px;
 }
 
-.footer__author {  
+.footer__author {
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
   color: white;
   margin-bottom: 18px;
-  margin-left: 0; 
-} 
+  margin-left: 0;
+}
 
 .footer__column-heading {
-margin: 0;
-color: white;
-font-size: 18px;
-line-height: 30px;
-font-weight: bold;
-display: flex;
-flex: column;
+  margin: 0;
+  color: white;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: bold;
+  display: flex;
+  flex: column;
+  padding-left: 40px;
 } 
 
 .footer__column-links {
   margin-top: 20px;
   margin-bottom: 16px;
   display: flex;
-  flex-direction: column;     
+  flex-direction: column;    
 }
 
 .footer__column-link {
@@ -337,7 +347,11 @@ flex: column;
   line-height: 30px;
   font-weight: normal;
   text-decoration: none;
-  padding: 0;  
+  padding: 0;
+}
+
+.footer__column-link:hover {
+  color: rgb(155, 149, 149);
 }
 
 .footer__column_content_social {
