--- a/styles/style.css
+++ b/styles/style.css
@@ -277,7 +277,7 @@
 .kaufman__triangle {
   background-image: url(kaufman-triangle.svg);
   background-repeat: no-repeat;
-  background-position: contain;
+  background-size: contain;
   width: 877px;
   height: 877px;
   top: 0;
