--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -4,6 +4,7 @@
   font-size: 30px;
   font-weight: normal;
   margin-left: 48px;
+  align-self: flex-start;
   text-decoration: none;
   transition: 1s ease;
   opacity: 1;
