--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,14 +1,5 @@
-@keyframes rotation {
-  from{
-    transform: rotate(0deg);
-  }
-  to{
-    transform: rotate(360deg);
-  }
-}
-
 .kaufman__triangle {
-  background-image: url(../../../../images/kaufman-triangle.svg);
+  background-image: url(../../../images/kaufman-triangle.svg);
   background-repeat: no-repeat;
   background-size: contain;
   width: 877px;
@@ -17,5 +8,4 @@
   right: -210px;
   position: absolute;
   z-index: -1;
-  animation: rotation 20s linear 0s infinite;
 }
